# planetblupi-dev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bkp  README.md  cmd.sh.in  planetblupi-dev.kdev4
MyApplication/app/: build.gradle
MyApplication/app/src/androidTest/java/pl/krzysh/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: native-lib.cpp
MyApplication/app/src/main/java/pl/krzysh/myapplication/: MainActivity.java
MyApplication/app/src/main/res/layout/: activity_main.xml
MyApplication/app/src/test/java/pl/krzysh/myapplication/: ExampleUnitTest.java
android/: SDL_android_main.c
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bkp
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res.bkp/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
